# nomad

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
current_dist/: nomad_audio-0.0.8-py3-none-any.whl
data/: nomad_dataset.md  train.csv  valid.csv
out_models/train_triplet/26-09-2023_12-17-52/: config.yaml
src/config/: ._config_audio_degrader.yaml  config_audio_degrader.yaml  eval_triplet.yaml  test_nomad_loss.yaml  test_pip.yaml  train_triplet.yaml
src/dataloader/: triplet_dataloader.py
src/models/: networks.py
src/nomad_audio/: __init__.py  __main__.py  nomad.py  nomad_loss_test.py  nomad_score_test.py  se_config.yaml
src/training/: train_triplet.py
src/utils/: ._audio_degrader_test.py  ._audio_degrader_training.py  ._degradations.py  audio_degrader_test.py  audio_degrader_training.py  degradations.py  librispeechdeg_subset.py  nsim_triplet_sampling.py
