# pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["data*", "pt-models*", ".vscode*", "se-models*", "results-csv*"]

[project]
name = "nomad_audio"
version = "0.0.3"
description = "Perceptual similarity embeddings for non-matching reference audio quality assessment and speech enhancement"
readme = "README.md"
authors = [
    { name = "Alessandro Ragano", email = "alessandroragano@gmail.com" },
]
license = { file = "LICENSE" }
 
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["Speech quality", 
      "Speech enhancement", 
      "Audio quality",]

dependencies = ["torch==1.12.1", 
                "torchvision==0.13.1",
                "torchaudio==0.12.1", 
                "fairseq>=0.12.2",
                "matplotlib>=3.5.2",
                "pandas>=1.4.2",
                "scikit-learn>=1.0.2",
                "seaborn>=0.12.2",
                "soundfile>=0.12.1",
                "click>=8.1.3",
                "pesq>=0.0.4"]

requires-python = ">=3.9"

[project.urls]
"Homepage" = "https://github.com/alessandroragano/nomad"
